drivers: mipi_dsi: add support for STM32 DSI controller
Add initial support for STM32 DSI controller together with LTDC.

Signed-off-by: Gerard Marull-Paretas <gerard@teslabs.com>

--- a/drivers/mipi_dsi/Kconfig
+++ b/drivers/mipi_dsi/Kconfig
@@ -20,4 +20,6 @@ config MIPI_DSI_INIT_PRIORITY
 	help
 	  MIPI-DSI Host Controllers initialization priority.
 
+source "drivers/mipi_dsi/Kconfig.stm32"
+
 endif
