--- a/drivers/display/Kconfig
+++ b/drivers/display/Kconfig
@@ -25,6 +25,7 @@ source "drivers/display/Kconfig.st7789v"
 source "drivers/display/Kconfig.gd7965"
 source "drivers/display/Kconfig.dummy"
 source "drivers/display/Kconfig.ls0xx"
+source "drivers/display/Kconfig.otm8009a"
 
 config FRAMEBUF_DISPLAY
 	# Hidden, selected by client drivers.
