--- a/boards/arm/stm32h747i_disco/stm32h747i_disco_m7_defconfig
+++ b/boards/arm/stm32h747i_disco/stm32h747i_disco_m7_defconfig
@@ -36,6 +36,24 @@ CONFIG_ARM_MPU=y
 # Enable HW stack protection
 CONFIG_HW_STACK_PROTECTION=y
 
+# Enable SDRAM
+CONFIG_MEMC=y
+CONFIG_MEMC_STM32_SDRAM=y
+
+# produce 27.5 MHz at PLL3 R output (for LTDC)
+CONFIG_CLOCK_STM32_PLL3_ENABLE=y
+CONFIG_CLOCK_STM32_PLL3_M_DIVISOR=5
+CONFIG_CLOCK_STM32_PLL3_N_MULTIPLIER=132
+CONFIG_CLOCK_STM32_PLL3_R_ENABLE=y
+CONFIG_CLOCK_STM32_PLL3_R_DIVISOR=24
+
+# Enable DSI
+CONFIG_MIPI_DSI=y
+
+# Enable OTM8009A display
+CONFIG_DISPLAY=y
+CONFIG_OTM8009A=y
+
 # Disable following to assign serial ports to m4 core
 
 # enable uart driver
